--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1420.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.9.0",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
     "seeder": "^0.2.1",
